machines: i.mx 8/8X/8MM: keep tune pinned to aarch64
meta-freescale started to set specialised tunes for the i.MX8 based
machines. Override that in our machine specific files so that the
user space packages all have the same ARCH 'aarch64' and need not be
built for each CPU flavour individually.
However change the tune include file so that one could change to one of
the more speciallized tune if one wants to do so at the expense of
additional compile time.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -10,7 +10,9 @@ SOC_SILICON_REV ?= ""
 MACHINEOVERRIDES =. "mx8:mx8qm:"
 
 require conf/machine/include/imx-base.inc
-require conf/machine/include/arm/arch-arm64.inc
+# override imx-base.inc which sets this to cortexa72-cortexa53-crypto
+DEFAULTTUNE_mx8qm = "aarch64"
+require conf/machine/include/tune-cortexa72-cortexa53.inc
 
 # Don't include kernels in standard images
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
