apalis-imx8.conf: deploy additional device trees
Related-to: ELB-1254
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit ad827347548201612eee97129b63db07b3e9a884)
(cherry picked from commit e64e8892ddc0527ec157ed82bf917929774f0916)

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -23,7 +23,11 @@ LOADADDR = ""
 # auto-serial-console there
 USE_VT = "0"
 
-KERNEL_DEVICETREE = "freescale/fsl-imx8qm-apalis-eval.dtb"
+KERNEL_DEVICETREE = " \
+    freescale/fsl-imx8qm-apalis-eval.dtb \
+    freescale/fsl-imx8qm-apalis-ixora-v1.1.dtb \
+    freescale/fsl-imx8qm-apalis-v1.1-eval.dtb \
+"
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
