machines: colibri-imx8x: configure the kernel version for upstream
React on the upstream override and then use a mainlinish kernel.
Use the same kernel also for upstream-rt as we currently don't have
a mainlinish rt flavour ready for i.MX8 X.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -6,6 +6,7 @@
 MACHINE_NAME = "Colibri-iMX8X"
 
 MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:"
+MACHINEOVERRIDES_append_upstream = ":use-mainline-bsp"
 
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/arch-arm64.inc
@@ -26,6 +27,7 @@ KERNEL_DEVICETREE = " \
     freescale/fsl-imx8qxp-colibri-lvds-single-eval-v3.dtb \
     freescale/fsl-imx8qxp-colibri-aster.dtb \
 "
+KERNEL_DEVICETREE_upstream = "freescale/imx8qxp-colibri-eval-v3.dtb"
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
@@ -44,6 +46,8 @@ WKS_FILE_DEPENDS_append = " u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex-rt"
+PREFERRED_PROVIDER_virtual/kernel_upstream = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/kernel_upstream_preempt-rt = "linux-toradex-mainline"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-toradex-fw-utils"
 # Currently we use the nxp 2018.03 downstream for mx8 as some features are
