layer.conf: add dunfell, drop warrior in compat layer
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,4 +22,4 @@ LAYERDEPENDS_toradex-nxp-layer = " \
     fsl-arm-extra \
     toradex-bsp-common-layer \
 "
-LAYERSERIES_COMPAT_toradex-nxp-layer = "warrior zeus"
+LAYERSERIES_COMPAT_toradex-nxp-layer = "zeus dunfell"
