colibri-imx6ull: add wifi firmware
Wi-Fi firmware may help (;-p).

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -35,4 +35,5 @@ WIC_CREATE_EXTRA_ARGS_append = " --no-fstab-update"
 SERIAL_CONSOLES = "115200;ttymxc0"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
+MACHINE_FIRMWARE_append = " linux-firmware-sd8997"
 MACHINE_FIRMWARE_remove = "firmware-imx-epdc"
