--- a/conf/machine/colibri-imx7-emmc.conf
+++ b/conf/machine/colibri-imx7-emmc.conf
@@ -11,7 +11,16 @@ include conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex"
 KERNEL_IMAGETYPE = "zImage"
-KERNEL_DEVICETREE += "imx7d-colibri-emmc-eval-v3.dtb imx7d-colibri-emmc-aster.dtb"
+KERNEL_DEVICETREE += " \
+    imx7d-colibri-emmc-aster.dtb \
+    imx7d-colibri-emmc-eval-v3.dtb \
+    imx7d-colibri-emmc-iris.dtb \
+    imx7d-colibri-emmc-iris-v2.dtb \
+"
+KERNEL_DEVICETREE_use-mainline-bsp += " \
+    imx7d-colibri-emmc-aster.dtb \
+    imx7d-colibri-emmc-eval-v3.dtb \
+"
 
 # The kernel lives in a seperate FAT partition, don't deploy it in /boot/
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
