verdin-imx8mm: follow renamed dtb name and add new one
Note that currently the Toradex Easy Installer does nothing with the
TORADEX_PRODUCT_IDS[0055] setting on eMMC machines.

Related-to: ELB-2322
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit bdde1ace3087c72ee7129623546c240b905df50c)

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -16,7 +16,10 @@ require conf/machine/include/tune-cortexa53.inc
 # Don't include kernels in standard images
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
 
-KERNEL_DEVICETREE = "freescale/fsl-imx8mm-verdin-dev.dtb "
+KERNEL_DEVICETREE = " \
+    freescale/fsl-imx8mm-verdin-nonwifi-dev.dtb \
+    freescale/fsl-imx8mm-verdin-wifi-dev.dtb \
+"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "verdin-imx8mm_config,sdcard"
@@ -74,5 +77,6 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC="imx-boot"
 OFFSET_BOOTROM_PAYLOAD="2"
 
-TORADEX_PRODUCT_IDS = "0055"
-TORADEX_PRODUCT_IDS[0055] = "fsl-imx8mm-verdin-dev.dtb"
+TORADEX_PRODUCT_IDS = "0055 0057"
+TORADEX_PRODUCT_IDS[0055] = "fsl-imx8mm-verdin-wifi-dev.dtb"
+TORADEX_PRODUCT_IDS[0057] = "fsl-imx8mm-verdin-nonwifi-dev.dtb"
