--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,7 +19,7 @@ BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.bb' % layer \
 LAYERDEPENDS_toradex-nxp-layer = " \
     core \
     freescale-layer \
-    fsl-arm-extra \
+    freescale-3rdparty \
     toradex-bsp-common-layer \
 "
 LAYERSERIES_COMPAT_toradex-nxp-layer = "zeus dunfell"
