meta: adapt to the latest changes in meta-freescale-3rdparty layer
The changes include:
- Set PREFERRED_PROVIDER_u-boot-default-script to u-boot-distro-boot.
- Drop MACHINE_BOOT_FILES, we dont have to maintain a extra variable.
- Drop colibri-imx7-emmc.conf file, it's already in
  meta-freescale-3rdparty layer, move Toradex related definitions to
  colibri-imx7-emmc.inc file.
- Drop u-boot-distro-boot from WKS_FILE_DEPENDS, to avoid multiple boot
  scripts in it.

Signed-off-by: Ming Liu <ming.liu@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -37,9 +37,9 @@ IMAGE_BOOTLOADER = "imx-boot"
 # Set imx-mkimage boot target
 IMXBOOT_TARGETS = "flash_evk_emmc_fastboot"
 
-MACHINE_BOOT_FILES = "boot.scr"
-IMAGE_BOOT_FILES_append = " ${MACHINE_BOOT_FILES}"
-WKS_FILE_DEPENDS_append = " u-boot-distro-boot"
+IMAGE_BOOT_FILES_append = " boot.scr-${MACHINE};boot.scr"
+WKS_FILE_DEPENDS_append = " u-boot-default-script"
+PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 LOADADDR = ""
 UBOOT_SUFFIX = "bin"
