--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -36,9 +36,9 @@ BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
 IMX_BOOT_SEEK = "32"
 
-MACHINE_BOOT_FILES = "boot.scr hdmitxfw.bin dpfw.bin"
-IMAGE_BOOT_FILES_append = " ${MACHINE_BOOT_FILES}"
-WKS_FILE_DEPENDS_append = " firmware-imx-8 u-boot-distro-boot"
+IMAGE_BOOT_FILES_append = " boot.scr-${MACHINE};boot.scr hdmitxfw.bin dpfw.bin"
+WKS_FILE_DEPENDS_append = " u-boot-default-script"
+PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex-rt"
