mx8qxp: require tune-cortexa35.inc instead of arch-arm64.inc
Require conf/machine/include/tune-cortexa35.inc instead of
conf/machine/include/arm/arch-arm64.inc, but spin DEFAULTTUNE to
aarch64, if a end user wants cortexa35-crypto, he need set DEFAULTTUNE
accordingly.

Signed-off-by: Ming Liu <ming.liu@toradex.com>

--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -9,7 +9,9 @@ MACHINE_NAME = "Apalis-iMX8X"
 MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:"
 
 require conf/machine/include/imx-base.inc
-require conf/machine/include/arm/arch-arm64.inc
+# if one wants cortexa35-crypto, set DEFAULTTUNE accordingly
+DEFAULTTUNE_mx8qxp = "aarch64"
+require conf/machine/include/tune-cortexa35.inc
 
 # Don't include kernels in standard images
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
