--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -10,7 +10,9 @@ MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:"
 MACHINEOVERRIDES_append_upstream = ":use-mainline-bsp"
 
 require conf/machine/include/imx-base.inc
-require conf/machine/include/arm/arch-arm64.inc
+# if one wants cortexa35-crypto, set DEFAULTTUNE accordingly
+DEFAULTTUNE_mx8qxp = "aarch64"
+require conf/machine/include/tune-cortexa35.inc
 
 # Don't include kernels in standard images
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
