--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -9,11 +9,9 @@ MACHINE_NAME = "Verdin-iMX8MM"
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
 
 require conf/machine/include/imx-base.inc
-# override imx-base.inc which sets this to cortexa53-crypto
-# if one wants cortexa53-crypto additionally change to include
-# conf/machine/include/arm/cortexa53-crypto.inc
+# if one wants cortexa53-crypto, set DEFAULTTUNE accordingly
 DEFAULTTUNE_mx8mm = "aarch64"
-require conf/machine/include/arm/arch-arm64.inc
+require conf/machine/include/tune-cortexa53.inc
 
 # Don't include kernels in standard images
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
