verdin-imx8mm.conf: set IMX_DEFAULT_BSP
IMX_DEFAULT_BSP is set to 'mainline' by default, we should change it to
nxp for verdin-imx8mm.

Signed-off-by: Ming Liu <ming.liu@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -8,6 +8,8 @@ MACHINE_NAME = "Verdin-iMX8MM"
 
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
 
+IMX_DEFAULT_BSP = "nxp"
+
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa53-crypto
 DEFAULTTUNE_mx8mm = "aarch64"
