--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -9,6 +9,8 @@ SOC_SILICON_REV ?= ""
 
 MACHINEOVERRIDES =. "mx8:mx8qm:"
 
+IMX_DEFAULT_BSP = "nxp"
+
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa72-cortexa53-crypto
 DEFAULTTUNE_mx8qm = "aarch64"
