--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -9,6 +9,8 @@ MACHINE_NAME = "Apalis-iMX8X"
 SILICON-OVERRIDES ?= "mx8qxpc0:"
 MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:${SILICON-OVERRIDES}"
 
+IMX_DEFAULT_BSP = "nxp"
+
 require conf/machine/include/imx-base.inc
 # if one wants cortexa35-crypto, set DEFAULTTUNE accordingly
 DEFAULTTUNE_mx8qxp = "aarch64"
@@ -43,6 +45,7 @@ WKS_FILE_DEPENDS_append = " u-boot-default-script"
 PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex-rt"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-toradex-fw-utils"
 # Currently we use the nxp 2018.03 downstream for mx8 as some features are
