--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -50,6 +50,9 @@ PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex-rt"
 PREFERRED_PROVIDER_virtual/kernel_upstream = "linux-toradex-mainline"
+# TODO: Add colibri-imx8x to linux-toradex-mainline-rt.
+# So far it's not supported yet in linux-toradex-mainline-rt source, spin to
+# linux-toradex-mainline temporarily.
 PREFERRED_PROVIDER_virtual/kernel_upstream_preempt-rt = "linux-toradex-mainline"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-toradex-fw-utils"
