--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -22,7 +22,7 @@ KERNEL_DEVICETREE = " \
 "
 
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "verdin-imx8mm_config,sdcard"
+UBOOT_CONFIG[sd] = "verdin-imx8mm_defconfig,sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
 UBOOT_ENTRYPOINT = "0x80280000"
