machines: u-boot: use full config name
U-Boot used to be configured by 'make <board>_config', however with the
move integration of the Kconfig system that changed to use a config file
ending in _defconfig. Usually those names are <board>_defconfig.
So nowadays one configures with 'make <whatever>_defconfig'.
If make is called with <whatever>_config that is silently changed to
<whatever>_defconfig.
Change our config targets to the new name to prevent confusion.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit 30b49e9696e82869cffc9994d7b5391d75c13dec)

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -31,7 +31,7 @@ KERNEL_DEVICETREE = " \
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "apalis-imx8_config,sdcard"
+UBOOT_CONFIG[sd] = "apalis-imx8_defconfig,sdcard"
 
 UBOOT_ENTRYPOINT = "0x80280000"
 UBOOT_RD_LOADADDRESS = "0xA0000000"
