--- a/conf/machine/colibri-imx8x-v10b.conf
+++ b/conf/machine/colibri-imx8x-v10b.conf
@@ -7,9 +7,12 @@
 # for B0 silicon use empty string
 SILICON-OVERRIDES = ""
 
-MACHINE_NAME = "Colibri-iMX8X-V10B"
-
 # keep the original machine as an override with high prio
 MACHINEOVERRIDES =. "colibri-imx8x:"
 
 require conf/machine/colibri-imx8x.conf
+
+# reuse DISTRO_FLAVOUR to display special version exception in the
+# Toradex Easy Installer application
+DISTRO_FLAVOUR_append = " for V1.0B HW"
+MACHINE_NAME = "Colibri-iMX8X-V10B"
