machines: apalis-imx8x-v11a: fix image naming
MACHINE_NAME must be set after including the apalis-imx8x.conf file or
it will be reset back to the standard Apalis-iMX8X value.

Use DISTRO_FLAVOUR to get a different string into the TEZI image list.

Related-to: ELB-2729
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit e914e84d24d99ddbd2b33d92e0fa5c913bb78ee4)

--- a/conf/machine/apalis-imx8x-v11a.conf
+++ b/conf/machine/apalis-imx8x-v11a.conf
@@ -7,9 +7,12 @@
 # for B0 silicon use empty string
 SILICON-OVERRIDES = ""
 
-MACHINE_NAME = "Apalis-iMX8X-V11A"
-
 # keep the original machine as an override with high prio
 MACHINEOVERRIDES =. "apalis-imx8x:"
 
 require conf/machine/apalis-imx8x.conf
+
+# reuse DISTRO_FLAVOUR to display special version exception in the
+# Toradex Easy Installer application
+DISTRO_FLAVOUR_append = " for V1.1A HW"
+MACHINE_NAME = "Apalis-iMX8X-V11A"
