verdin-imx8mm: deploy dahlia device trees
Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
(cherry picked from commit f7ebd294c81285a6579b10a09e49a3d635ac4b70)

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -17,7 +17,9 @@ require conf/machine/include/tune-cortexa53.inc
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
 
 KERNEL_DEVICETREE = " \
+    freescale/fsl-imx8mm-verdin-nonwifi-dahlia.dtb \
     freescale/fsl-imx8mm-verdin-nonwifi-dev.dtb \
+    freescale/fsl-imx8mm-verdin-wifi-dahlia.dtb \
     freescale/fsl-imx8mm-verdin-wifi-dev.dtb \
 "
 
