--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -36,7 +36,7 @@ UBOOT_RD_LOADADDRESS = "0xA0000000"
 DDR_FIRMWARE_NAME = "lpddr4_pmu_train_1d_imem.bin lpddr4_pmu_train_1d_dmem.bin lpddr4_pmu_train_2d_imem.bin lpddr4_pmu_train_2d_dmem.bin"
 
 # Set u-boot DTB
-UBOOT_DTB_NAME = "fsl-imx8mm-verdin.dtb"
+UBOOT_DTB_NAME = "imx8mm-verdin.dtb"
 
 BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
@@ -64,9 +64,9 @@ MACHINE_FIRMWARE_append = " linux-firmware-ath10k linux-firmware-imx-sdma-imx7d"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex-rt"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
-# Currently we use the nxp 2018.03 downstream for mx8 as some features are
-# not yet available in 2019.03.
-PREFERRED_VERSION_u-boot-toradex = "2018.03"
+# Currently we use the nxp 2020.04 downstream for mx8 as some features are
+# not yet available in 2020.07.
+PREFERRED_VERSION_u-boot-toradex = "2020.04"
 
 MACHINE_FIRMWARE_append = " linux-firmware-sd8997"
 MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
