u-boot config: change to colibri-imx8x_defconfig
This changed in the u-boot-toradex toradex_imx_v2020.04_5.4.24_2.1.0.

Related-to: ELB-2758
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -34,7 +34,7 @@ KERNEL_DEVICETREE_use-mainline-bsp = "freescale/imx8qxp-colibri-eval-v3.dtb"
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "colibri-imx8qxp_defconfig,sdcard"
+UBOOT_CONFIG[sd] = "colibri-imx8x_defconfig,sdcard"
 
 UBOOT_ENTRYPOINT = "0x80280000"
 UBOOT_RD_LOADADDRESS = "0xA0000000"
