machines: imx8: drop fsl- dtb prefix
In the kernel sources that suffix was dropped.
Follow this in the machine configuration.

Related-to: ELB-2758
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -26,12 +26,12 @@ LOADADDR = ""
 USE_VT = "0"
 
 KERNEL_DEVICETREE = " \
-    freescale/fsl-imx8qm-apalis-eval.dtb \
-    freescale/fsl-imx8qm-apalis-eval-ar0521.dtb \
-    freescale/fsl-imx8qm-apalis-ixora-v1.1.dtb \
-    freescale/fsl-imx8qm-apalis-ixora-v1.1-ar0521.dtb \
-    freescale/fsl-imx8qm-apalis-v1.1-eval.dtb \
-    freescale/fsl-imx8qm-apalis-v1.1-eval-ar0521.dtb \
+    freescale/imx8qm-apalis-eval.dtb \
+    freescale/imx8qm-apalis-eval-ar0521.dtb \
+    freescale/imx8qm-apalis-ixora-v1.1.dtb \
+    freescale/imx8qm-apalis-ixora-v1.1-ar0521.dtb \
+    freescale/imx8qm-apalis-v1.1-eval.dtb \
+    freescale/imx8qm-apalis-v1.1-eval-ar0521.dtb \
 "
 
 UBOOT_SUFFIX = "bin"
@@ -72,7 +72,7 @@ UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
 TORADEX_PRODUCT_IDS = "0037 0047 0048 0049"
-TORADEX_PRODUCT_IDS[0037] = "fsl-imx8qm-apalis.dtb"
-TORADEX_PRODUCT_IDS[0047] = "fsl-imx8qm-apalis.dtb"
-TORADEX_PRODUCT_IDS[0048] = "fsl-imx8qm-apalis.dtb"
-TORADEX_PRODUCT_IDS[0049] = "fsl-imx8qm-apalis.dtb"
+TORADEX_PRODUCT_IDS[0037] = "imx8qm-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0047] = "imx8qm-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0048] = "imx8qm-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0049] = "imx8qm-apalis-v1.1-eval.dtb"
