--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -26,7 +26,7 @@ LOADADDR = ""
 USE_VT = "0"
 
 KERNEL_DEVICETREE = " \
-    freescale/fsl-imx8qxp-apalis-eval.dtb \
+    freescale/imx8qxp-apalis-eval.dtb \
 "
 
 UBOOT_SUFFIX = "bin"
@@ -67,7 +67,7 @@ UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
 TORADEX_PRODUCT_IDS = "0046 0053 0054 2600"
-TORADEX_PRODUCT_IDS[0046] = "fsl-imx8qxp-apalis-eval.dtb"
-TORADEX_PRODUCT_IDS[0053] = "fsl-imx8qxp-apalis-eval.dtb"
-TORADEX_PRODUCT_IDS[0054] = "fsl-imx8qxp-apalis-eval.dtb"
-TORADEX_PRODUCT_IDS[2600] = "fsl-imx8qxp-apalis-eval.dtb"
+TORADEX_PRODUCT_IDS[0046] = "imx8qxp-apalis-eval.dtb"
+TORADEX_PRODUCT_IDS[0053] = "imx8qxp-apalis-eval.dtb"
+TORADEX_PRODUCT_IDS[0054] = "imx8qxp-apalis-eval.dtb"
+TORADEX_PRODUCT_IDS[2600] = "imx8qxp-apalis-eval.dtb"
