--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -24,11 +24,11 @@ LOADADDR = ""
 USE_VT = "0"
 
 KERNEL_DEVICETREE = " \
-    freescale/fsl-imx8qxp-colibri-eval-v3.dtb \
-    freescale/fsl-imx8qxp-colibri-dsihdmi-eval-v3.dtb \
-    freescale/fsl-imx8qxp-colibri-lvds-dual-eval-v3.dtb \
-    freescale/fsl-imx8qxp-colibri-lvds-single-eval-v3.dtb \
-    freescale/fsl-imx8qxp-colibri-aster.dtb \
+    freescale/imx8qxp-colibri-eval-v3.dtb \
+    freescale/imx8qxp-colibri-dsihdmi-eval-v3.dtb \
+    freescale/imx8qxp-colibri-lvds-dual-eval-v3.dtb \
+    freescale/imx8qxp-colibri-lvds-single-eval-v3.dtb \
+    freescale/imx8qxp-colibri-aster.dtb \
 "
 KERNEL_DEVICETREE_use-mainline-bsp = "freescale/imx8qxp-colibri-eval-v3.dtb"
 
@@ -74,7 +74,7 @@ UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
 TORADEX_PRODUCT_IDS = "0038 0050 0051 0052"
-TORADEX_PRODUCT_IDS[0038] = "fsl-imx8qxp-colibri-eval-v3.dtb"
-TORADEX_PRODUCT_IDS[0050] = "fsl-imx8qxp-colibri-eval-v3.dtb"
-TORADEX_PRODUCT_IDS[0051] = "fsl-imx8qxp-colibri-eval-v3.dtb"
-TORADEX_PRODUCT_IDS[0052] = "fsl-imx8qxp-colibri-eval-v3.dtb"
+TORADEX_PRODUCT_IDS[0038] = "imx8qxp-colibri-eval-v3.dtb"
+TORADEX_PRODUCT_IDS[0050] = "imx8qxp-colibri-eval-v3.dtb"
+TORADEX_PRODUCT_IDS[0051] = "imx8qxp-colibri-eval-v3.dtb"
+TORADEX_PRODUCT_IDS[0052] = "imx8qxp-colibri-eval-v3.dtb"
