--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -19,10 +19,10 @@ require conf/machine/include/tune-cortexa53.inc
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
 
 KERNEL_DEVICETREE = " \
-    freescale/fsl-imx8mm-verdin-nonwifi-dahlia.dtb \
-    freescale/fsl-imx8mm-verdin-nonwifi-dev.dtb \
-    freescale/fsl-imx8mm-verdin-wifi-dahlia.dtb \
-    freescale/fsl-imx8mm-verdin-wifi-dev.dtb \
+    freescale/imx8mm-verdin-nonwifi-dahlia.dtb \
+    freescale/imx8mm-verdin-nonwifi-dev.dtb \
+    freescale/imx8mm-verdin-wifi-dahlia.dtb \
+    freescale/imx8mm-verdin-wifi-dev.dtb \
 "
 
 UBOOT_CONFIG ??= "sd"
@@ -80,5 +80,5 @@ UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "2"
 
 TORADEX_PRODUCT_IDS = "0055 0057"
-TORADEX_PRODUCT_IDS[0055] = "fsl-imx8mm-verdin-wifi-dev.dtb"
-TORADEX_PRODUCT_IDS[0057] = "fsl-imx8mm-verdin-nonwifi-dev.dtb"
+TORADEX_PRODUCT_IDS[0055] = "imx8mm-verdin-wifi-dev.dtb"
+TORADEX_PRODUCT_IDS[0057] = "imx8mm-verdin-nonwifi-dev.dtb"
