linux-toradex-rt: update to downstream 5.4-2.1.x
This drops the linux-toradex-rt recipe in favour of combining its
functionality into the linux-toradex_5.4-2.1.x.bb recipe.
The override preempt-rt applies the RT patch and changes the kernel config
to use PREEMPT_RT.

Related-to: ELB-2758
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -45,7 +45,7 @@ WKS_FILE_DEPENDS_append = " u-boot-default-script"
 PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
-PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex-rt"
+PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
 # not yet available in 2020.07.
