--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -62,7 +62,7 @@ MACHINE_FEATURES += "3g bluetooth alsa ext2 pci screen touchscreen usbgadget usb
 MACHINE_FIRMWARE_append = " linux-firmware-ath10k linux-firmware-imx-sdma-imx7d"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
-PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex-rt"
+PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
 # not yet available in 2020.07.
