apalis-imx8x.conf: specify rt kernel
Specify which kernel to build when preempt-rt is in overrides.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit ac86b3b0a510597c961c15803c1473ef0822d525)

--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -43,6 +43,7 @@ IMAGE_BOOT_FILES_append = " ${MACHINE_BOOT_FILES}"
 WKS_FILE_DEPENDS_append = " u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex-rt"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-toradex-fw-utils"
 # Currently we use the nxp 2018.03 downstream for mx8 as some features are
