machines: imx8: use Image.gz as kernel image type
The ARM64 Linux raw image now amounts to 32MB. Using Image.gz saves
about 20MB (Image.gz ~ 12MB). Use Image.gz as default boot image format.

Relates-to: ELB-1372
Signed-off-by: Igor Opaniuk <igor.opaniuk@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -34,6 +34,8 @@ KERNEL_DEVICETREE = " \
     freescale/imx8qm-apalis-v1.1-eval-ar0521.dtb \
 "
 
+KERNEL_IMAGETYPE_aarch64 = "Image.gz"
+
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "apalis-imx8_defconfig,sdcard"
