--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -29,6 +29,8 @@ KERNEL_DEVICETREE = " \
     freescale/imx8qxp-apalis-eval.dtb \
 "
 
+KERNEL_IMAGETYPE_aarch64 = "Image.gz"
+
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "apalis-imx8x_defconfig,sdcard"
