--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -32,6 +32,8 @@ KERNEL_DEVICETREE = " \
 "
 KERNEL_DEVICETREE_use-mainline-bsp = "freescale/imx8qxp-colibri-eval-v3.dtb"
 
+KERNEL_IMAGETYPE_aarch64 = "Image.gz"
+
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "colibri-imx8x_defconfig,sdcard"
