--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -24,6 +24,7 @@ KERNEL_DEVICETREE = " \
     freescale/imx8mm-verdin-wifi-dahlia.dtb \
     freescale/imx8mm-verdin-wifi-dev.dtb \
 "
+KERNEL_IMAGETYPE_aarch64 = "Image.gz"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "verdin-imx8mm_defconfig,sdcard"
