--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -63,6 +63,7 @@ MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "flash_b0"
 
+PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "apalis"
 
 IMAGE_CLASSES_append = " image_type_tezi"
