--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -65,6 +65,7 @@ MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "flash"
 
+PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "colibri"
 
 IMAGE_CLASSES_append = " image_type_tezi"
