--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -50,7 +50,7 @@ PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
 # not yet available in 2020.07.
-PREFERRED_VERSION_u-boot-toradex = "2020.04"
+PREFERRED_VERSION_u-boot-toradex = "2020.04%"
 
 MACHINE_FIRMWARE_append = " linux-firmware-usb8997"
 MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
