--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -79,6 +79,8 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "2"
 
-TORADEX_PRODUCT_IDS = "0055 0057"
-TORADEX_PRODUCT_IDS[0055] = "imx8mm-verdin-wifi-dev.dtb"
-TORADEX_PRODUCT_IDS[0057] = "imx8mm-verdin-nonwifi-dev.dtb"
+TORADEX_PRODUCT_IDS = "0055 0057 0059 0060"
+TORADEX_PRODUCT_IDS[0055] = "imx8mm-verdin-wifi-v1.1-dev.dtb"
+TORADEX_PRODUCT_IDS[0057] = "imx8mm-verdin-nonwifi-v1.1-dev.dtb"
+TORADEX_PRODUCT_IDS[0059] = "imx8mm-verdin-nonwifi-v1.1-dev.dtb"
+TORADEX_PRODUCT_IDS[0060] = "imx8mm-verdin-wifi-v1.1-dev.dtb"
