--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -75,6 +75,8 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC="imx-boot"
 OFFSET_BOOTROM_PAYLOAD="2"
 
-TORADEX_PRODUCT_IDS = "0055 0057"
+TORADEX_PRODUCT_IDS = "0055 0057 0059 0060"
 TORADEX_PRODUCT_IDS[0055] = "fsl-imx8mm-verdin-wifi-dev.dtb"
 TORADEX_PRODUCT_IDS[0057] = "fsl-imx8mm-verdin-nonwifi-dev.dtb"
+TORADEX_PRODUCT_IDS[0059] = "fsl-imx8mm-verdin-nonwifi-dev.dtb"
+TORADEX_PRODUCT_IDS[0060] = "fsl-imx8mm-verdin-wifi-dev.dtb"
