machines: verdin-imx8mm: deploy v1.1 device trees ￼ Related-to: ELB-3131 Related-to: ELB-3133 Related-to: ELB-3136 Related-to: ELB-3137 Related-to: ELB-3138 Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -21,8 +21,12 @@ RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
 KERNEL_DEVICETREE = " \
     freescale/imx8mm-verdin-nonwifi-dahlia.dtb \
     freescale/imx8mm-verdin-nonwifi-dev.dtb \
+    freescale/imx8mm-verdin-nonwifi-v1.1-dahlia.dtb \
+    freescale/imx8mm-verdin-nonwifi-v1.1-dev.dtb \
     freescale/imx8mm-verdin-wifi-dahlia.dtb \
     freescale/imx8mm-verdin-wifi-dev.dtb \
+    freescale/imx8mm-verdin-wifi-v1.1-dahlia.dtb \
+    freescale/imx8mm-verdin-wifi-v1.1-dev.dtb \
 "
 KERNEL_IMAGETYPE_aarch64 = "Image.gz"
 
