--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -34,8 +34,8 @@ UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "verdin-imx8mm_defconfig,sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
-UBOOT_ENTRYPOINT = "0x80280000"
-UBOOT_RD_LOADADDRESS = "0xA0000000"
+UBOOT_ENTRYPOINT = "0x40280000"
+UBOOT_RD_LOADADDRESS = "0x60000000"
 
 # Set DDR FIRMWARE
 DDR_FIRMWARE_NAME = "lpddr4_pmu_train_1d_imem.bin lpddr4_pmu_train_1d_dmem.bin lpddr4_pmu_train_2d_imem.bin lpddr4_pmu_train_2d_dmem.bin"
