--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -68,6 +68,8 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "apalis-imx8x_parallel-rgb_overlay.dtbo display-edt7_overlay.dtbo"
+
 TORADEX_PRODUCT_IDS = "0046 0053 0054 2600"
 TORADEX_PRODUCT_IDS[0046] = "imx8qxp-apalis-eval.dtb"
 TORADEX_PRODUCT_IDS[0053] = "imx8qxp-apalis-eval.dtb"
