--- a/recipes-bsp/u-boot/files/fw_env.config
+++ b/recipes-bsp/u-boot/files/fw_env.config
@@ -1,22 +1,19 @@
 # Configuration file for fw_(printenv/setenv) utility.
 # Up to two entries are valid, in this case the redundant
 # environment sector is assumed present.
-# Notice, that the "Number of sectors" is not required on NOR and SPI-dataflash.
-# Futhermore, if the Flash sector size is ommitted, this value is assumed to
-# be the same as the Environment size, which is valid for NOR and SPI-dataflash
+# Device offset must be prefixed with 0x to be parsed as a hexadecimal value.
+# On a block device a negative offset is treated as a backwards offset from the
+# end of the device/partition, rather than a forwards offset from the start.
 
-# NOR example
-# MTD device name	Device offset	Env. size	Flash sector size	Number of sectors
-#/dev/mtd1		0x0000		0x4000		0x4000
-#/dev/mtd2		0x0000		0x4000		0x4000
+# Toradex modules with eMMC
+# The U-Boot environment is stored at the end of the first eMMC boot partition
+# hence use a negative value. The environment is just in front of the config
+# block which occupies the last sector (hence -0x200)
+# Note that the eMMC boot areas (e.g. /dev/mmcblk0boot0) by default is read
+# only. To make it writeable, execute on the cmdline e.g.
+# $ echo 0 > /sys/block/mmcblk0boot0/force_ro
+# The fw_setenv tool provided by libubootenv does this automatically.
 
-# MTD SPI-dataflash example
-# MTD device name	Device offset	Env. size	Flash sector size	Number of sectors
-#/dev/mtd5		0x4200		0x4200
-#/dev/mtd6		0x4200		0x4200
+# Block device name	Device offset	Env. size
+/dev/emmc-boot0		-0x2200		0x2000
 
-# NAND example
-#/dev/mtd0		0x4000		0x4000		0x20000			2
-
-# Block device example
-#/dev/mmcblk0		0xc0000		0x20000
