machines: mx8m*: follow changes in meta-freescale
In order to build also with use-mainline-bsp ATF_PLATFORM and
IMX_BOOT_SOC_TARGET variable assignments are no longer generically
set with SoC override and are now to be set by the machine
configurations.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -40,6 +40,8 @@ UBOOT_RD_LOADADDRESS = "0x60000000"
 # Set DDR FIRMWARE
 DDR_FIRMWARE_NAME = "lpddr4_pmu_train_1d_imem.bin lpddr4_pmu_train_1d_dmem.bin lpddr4_pmu_train_2d_imem.bin lpddr4_pmu_train_2d_dmem.bin"
 
+ATF_PLATFORM = "imx8mm"
+
 # Set u-boot DTB
 UBOOT_DTB_NAME = "imx8mm-verdin.dtb"
 
@@ -47,6 +49,7 @@ BOOT_SPACE = "65536"
 
 # Set imx-mkimage boot target
 IMXBOOT_TARGETS = "flash_evk_emmc_fastboot"
+IMX_BOOT_SOC_TARGET = "iMX8MM"
 
 IMAGE_BOOT_FILES_append = " boot.scr-${MACHINE};boot.scr"
 WKS_FILE_DEPENDS_append = " u-boot-default-script"
