--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -43,11 +43,14 @@ DDR_FIRMWARE_NAME = " \
     lpddr4_pmu_train_2d_imem${LPDDR_FW_VERSION}.bin \
 "
 
+ATF_PLATFORM = "imx8mm"
+
 BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
 
 # Set imx-mkimage boot target
 IMXBOOT_TARGETS = "flash_evk_emmc_fastboot"
+IMX_BOOT_SOC_TARGET = "iMX8MM"
 
 # Temporary until we have TEZI for installation on the eMMC
 SOC_DEFAULT_WKS_FILE_verdin-imx8mp ?= "verdin-imx8mp-imx-boot-bootpart.wks.in"
