machines: mx8/mx8x: follow changes in meta-freescale
In order to build also with use-mainline-bsp ATF_PLATFORM and
IMX_BOOT_SOC_TARGET variable assignments are no longer generically
set with SoC override and are now to be set by the machine
configurations.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -41,6 +41,8 @@ UBOOT_CONFIG[sd] = "apalis-imx8_defconfig,sdcard"
 UBOOT_ENTRYPOINT = "0x80280000"
 UBOOT_RD_LOADADDRESS = "0xA0000000"
 
+ATF_PLATFORM = "imx8qm"
+
 BOOT_SPACE = "65536"
 IMX_BOOT_SEEK = "32"
 
@@ -60,6 +62,7 @@ MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 MACHINE_FIRMWARE_append = " firmware-imx-8"
 
 IMXBOOT_TARGETS = "flash_b0"
+IMX_BOOT_SOC_TARGET = "iMX8QM"
 
 PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "apalis"
