--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -38,6 +38,8 @@ UBOOT_CONFIG[sd] = "apalis-imx8x_defconfig,sdcard"
 UBOOT_ENTRYPOINT = "0x80280000"
 UBOOT_RD_LOADADDRESS = "0xA0000000"
 
+ATF_PLATFORM = "imx8qx"
+
 BOOT_SPACE = "65536"
 IMX_BOOT_SEEK = "32"
 
@@ -56,6 +58,7 @@ MACHINE_FIRMWARE_append = " linux-firmware-usb8997"
 MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "flash"
+IMX_BOOT_SOC_TARGET = "iMX8QX"
 
 PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "apalis"
