--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -41,6 +41,8 @@ UBOOT_CONFIG[sd] = "colibri-imx8x_defconfig,sdcard"
 UBOOT_ENTRYPOINT = "0x80280000"
 UBOOT_RD_LOADADDRESS = "0xA0000000"
 
+ATF_PLATFORM = "imx8qx"
+
 BOOT_SPACE = "65536"
 IMX_BOOT_SEEK = "32"
 
@@ -63,6 +65,7 @@ MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
 MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "flash"
+IMX_BOOT_SOC_TARGET = "iMX8QX"
 
 PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "colibri"
