--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -74,10 +74,9 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
 
-# Add additional firmware
-MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
-MACHINE_FIRMWARE_append = " linux-firmware-imx-sdma-imx7d"
+# handle machine firmware
 MACHINE_FIRMWARE_append = " linux-firmware-sd8997"
+MACHINE_FIRMWARE_remove = "firmware-sof-imx"
 
 IMAGE_CLASSES_append = " image_type_tezi"
 IMAGE_FSTYPES += "teziimg"
