colibri-imx8x: follow IMX_DEFAULT_BSP change
IMX_DEFAULT_BSP is now set to use-mainline-bsp by default.
Explicitely set use-nxp-bsp for colibri-imx8x.

Building with use-mainline-bsp currently fails.
- imx-boot is not building.
- device tree overlays are not present.
- the mainline kernel only provides basic features for i.MX 8X.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -9,6 +9,8 @@ MACHINE_NAME = "Colibri-iMX8X"
 SILICON-OVERRIDES ?= "mx8qxpc0:"
 MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:${SILICON-OVERRIDES}"
 
+IMX_DEFAULT_BSP = "nxp"
+
 require conf/machine/include/imx-base.inc
 # if one wants cortexa35-crypto, set DEFAULTTUNE accordingly
 DEFAULTTUNE_mx8qxp = "aarch64"
