machines: i.mx 8x: follow changed soc revision selection
meta-freescale changed the way the SoC revision is selected.
It used to default to rev B0 with the override imx8qxpc0 selecteing rev C0.
Now it defaults to rev C0 with the MACHINE_FEATURE soc-revb0 selecting rev B0.

https://github.com/Freescale/meta-freescale/commit/80345fbe89c5ac96975f9c7ef38e8dc8d2a36346

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8x-v11a.conf
+++ b/conf/machine/apalis-imx8x-v11a.conf
@@ -3,9 +3,8 @@
 #@DESCRIPTION: Toradex Apalis iMX8X powered by a i.MX 8X SoC (B0 silicon) as found on all V1.0 and V1.1A versions
 #@MAINTAINER: Philippe Schenker <philippe.schenker@toradex.com>
 
-# for C0 silicon add mx8qxpc0:,
-# for B0 silicon use empty string
-SILICON-OVERRIDES = ""
+# Set SoC revision to B0
+MACHINE_FEATURES_append = " soc-revb0"
 
 # keep the original machine as an override with high prio
 MACHINEOVERRIDES =. "apalis-imx8x:"
