--- a/conf/machine/colibri-imx8x-v10b.conf
+++ b/conf/machine/colibri-imx8x-v10b.conf
@@ -3,9 +3,8 @@
 #@DESCRIPTION: Toradex Colibri iMX8X powered by a i.MX 8X SoC (B0 silicon) as found on older SoM Versions V1.0B
 #@MAINTAINER: Max Krummenacher <max.krummenacherr@toradex.com>
 
-# for C0 silicon add mx8qxpc0:,
-# for B0 silicon use empty string
-SILICON-OVERRIDES = ""
+# Set SoC revision to B0
+MACHINE_FEATURES_append = " soc-revb0"
 
 # keep the original machine as an override with high prio
 MACHINEOVERRIDES =. "colibri-imx8x:"
