--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -75,6 +75,8 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "apalis-imx8_hdmi_overlay.dtbo"
+
 TORADEX_PRODUCT_IDS = "0037 0047 0048 0049"
 TORADEX_PRODUCT_IDS[0037] = "imx8qm-apalis-v1.1-eval.dtb"
 TORADEX_PRODUCT_IDS[0047] = "imx8qm-apalis-v1.1-eval.dtb"
