machine: apalis-imx8x: load dsi-hdmi overlay on-boot
HDMI interface should be turned on by default. Make the
corresponding overlays to be applied on booting. Also,
add applying the overlay for resistive touch controller
ad7879 to fully support the Resistive Touch 7" Display.

Related-to: ELB-3395
Signed-off-by: Oleksandr Suvorov <oleksandr.suvorov@toradex.com>
(cherry picked from commit f1d8754c0e14b241e52229d657b5cce80938413c)

--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -69,7 +69,7 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "apalis-imx8x_parallel-rgb_overlay.dtbo display-edt7_overlay.dtbo"
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "apalis-imx8x_dsihdmi_overlay.dtbo apalis-imx8x_parallel-rgb_overlay.dtbo display-lt161010_overlay.dtbo apalis-imx8x_ad7879_overlay.dtbo"
 
 TORADEX_PRODUCT_IDS = "0046 0053 0054 2600"
 TORADEX_PRODUCT_IDS[0046] = "imx8qxp-apalis-eval.dtb"
