--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -41,6 +41,8 @@ UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "colibri-imx8x_defconfig,sdcard"
 
 UBOOT_ENTRYPOINT = "0x80280000"
+UBOOT_DTB_LOADADDRESS = "0x83100000"
+UBOOT_DTBO_LOADADDRESS = "0x83200000"
 UBOOT_RD_LOADADDRESS = "0xA0000000"
 
 BOOT_SPACE = "65536"
