--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -31,6 +31,8 @@ UBOOT_CONFIG[sd] = "verdin-imx8mm_defconfig,sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
 UBOOT_ENTRYPOINT = "0x40280000"
+UBOOT_DTB_LOADADDRESS = "0x43000000"
+UBOOT_DTBO_LOADADDRESS = "0x46000000"
 UBOOT_RD_LOADADDRESS = "0x60000000"
 
 # Set DDR FIRMWARE
