verdin-imx8mp: deploy dahlia device trees
Related-to: ELB-3541
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -19,7 +19,9 @@ require conf/machine/include/tune-cortexa53.inc
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
 
 KERNEL_DEVICETREE = " \
+    freescale/imx8mp-verdin-nonwifi-dahlia.dtb \
     freescale/imx8mp-verdin-nonwifi-dev.dtb \
+    freescale/imx8mp-verdin-wifi-dahlia.dtb \
     freescale/imx8mp-verdin-wifi-dev.dtb \
 "
 KERNEL_IMAGETYPE_aarch64 = "Image.gz"
