--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -78,7 +78,7 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "colibri-imx8x_parallel-rgb_overlay.dtbo colibri-imx8x_ad7879_overlay.dtbo display-edt7_overlay.dtbo"
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "colibri-imx8x_parallel-rgb_overlay.dtbo colibri-imx8x_ad7879_overlay.dtbo display-vga_overlay.dtbo"
 
 TORADEX_PRODUCT_IDS = "0038 0050 0051 0052"
 TORADEX_PRODUCT_IDS[0038] = "imx8qxp-colibri-eval-v3.dtb"
