meta:machine: set PREFERRED_PROVIDER_u-boot
'PREFERRED_PROVIDER_u-boot' is being checked in OE:
```
meta/classes/uboot-sign.bbclass
meta/classes/kernel-fitimage.bbclass
```

Let's set PREFERRED_PROVIDER_u-boot for some machines, so now all
Toradex's modules have it defined in machine files.

Related-to: TOR-1704

Signed-off-by: Ming Liu <ming.liu@toradex.com>
(cherry picked from commit 0fdc2e323e6230ded42ab7d2af1ffb0379a50b01)

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -77,6 +77,7 @@ MACHINE_FEATURES += "3g bluetooth alsa ext2 pci screen touchscreen usbgadget usb
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
+PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
