--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -55,6 +55,7 @@ PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
+PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
