verdin-imx8mp: add native hdmi to default dtb overlays
Native HDMI not being used by default is kinda pointless.

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
(cherry picked from commit 475a46dfad187ccd7e1488aa9112600693d7b2ce)

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -87,7 +87,7 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "verdin-imx8mp_lt8912_overlay.dtbo"
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "verdin-imx8mp_native-hdmi_overlay.dtbo verdin-imx8mp_lt8912_overlay.dtbo"
 
 TORADEX_PRODUCT_IDS = "0058 0061"
 TORADEX_PRODUCT_IDS[0058] = "imx8mp-verdin-wifi-dev.dtb"
