--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -89,6 +89,8 @@ OFFSET_BOOTROM_PAYLOAD = "0"
 
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "verdin-imx8mp_native-hdmi_overlay.dtbo verdin-imx8mp_lt8912_overlay.dtbo"
 
-TORADEX_PRODUCT_IDS = "0058 0061"
+TORADEX_PRODUCT_IDS = "0058 0061 0063 0064"
 TORADEX_PRODUCT_IDS[0058] = "imx8mp-verdin-wifi-dev.dtb"
 TORADEX_PRODUCT_IDS[0061] = "imx8mp-verdin-nonwifi-dev.dtb"
+TORADEX_PRODUCT_IDS[0063] = "imx8mp-verdin-nonwifi-dev.dtb"
+TORADEX_PRODUCT_IDS[0064] = "imx8mp-verdin-wifi-dev.dtb"
