layer.conf: add honister to compat layer
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,4 +22,4 @@ LAYERDEPENDS_toradex-nxp-layer = " \
     freescale-3rdparty \
     toradex-bsp-common-layer \
 "
-LAYERSERIES_COMPAT_toradex-nxp-layer = "gatesgarth hardknott"
+LAYERSERIES_COMPAT_toradex-nxp-layer = "gatesgarth hardknott honister"
