machine: apalis-imx8.conf: deploy Apalis iMX8QP DTs
Apalis iMX8QP device trees should be deployed
for the IMX8QP SKUs with prodid ID 48 and 49

Related-to: ELB-3338
Signed-off-by: Denys Drozdov <denys.drozdov@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -30,6 +30,8 @@ KERNEL_DEVICETREE = " \
     freescale/imx8qm-apalis-ixora-v1.1.dtb \
     freescale/imx8qm-apalis-v1.1-eval.dtb \
     freescale/imx8qm-apalis-v1.1-ixora-v1.1.dtb \
+    freescale/imx8qp-apalis-v1.1-eval.dtb \
+    freescale/imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
 "
 
 KERNEL_IMAGETYPE_aarch64 = "Image.gz"
@@ -80,5 +82,6 @@ TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "apalis-imx8_hdmi_overlay.dtbo"
 TORADEX_PRODUCT_IDS = "0037 0047 0048 0049"
 TORADEX_PRODUCT_IDS[0037] = "imx8qm-apalis-v1.1-eval.dtb"
 TORADEX_PRODUCT_IDS[0047] = "imx8qm-apalis-v1.1-eval.dtb"
-TORADEX_PRODUCT_IDS[0048] = "imx8qm-apalis-v1.1-eval.dtb"
-TORADEX_PRODUCT_IDS[0049] = "imx8qm-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0048] = "imx8qp-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0049] = "imx8qp-apalis-v1.1-eval.dtb"
+
