layer: convert to new override syntax
Fix the leftovers which the script didn't catch.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -61,7 +61,7 @@ MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
 IMXBOOT_TARGETS = "flash"
 IMX_BOOT_SOC_TARGET = "iMX8QX"
 
-PREFERRED_PROVIDER:imx-sc-firmware = "imx-sc-firmware-toradex"
+PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "apalis"
 
 IMAGE_CLASSES:append = " image_type_tezi"
