--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -69,7 +69,7 @@ MACHINE_FIRMWARE:append = " firmware-imx-8"
 IMXBOOT_TARGETS = "flash_b0"
 IMX_BOOT_SOC_TARGET = "iMX8QM"
 
-PREFERRED_PROVIDER:imx-sc-firmware = "imx-sc-firmware-toradex"
+PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "apalis"
 
 IMAGE_CLASSES:append = " image_type_tezi"
