--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -68,7 +68,7 @@ MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
 IMXBOOT_TARGETS = "flash"
 IMX_BOOT_SOC_TARGET = "iMX8QX"
 
-PREFERRED_PROVIDER:imx-sc-firmware = "imx-sc-firmware-toradex"
+PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "colibri"
 
 IMAGE_CLASSES:append = " image_type_tezi"
