layer: convert to new override syntax
This is the result of automated script (0.9.3) conversion:

+# meta-toradex-distro
+vars = vars + ["preempt-rt","tdx","upstream"]
+# meta-toradex-* machines
+vars = vars + ["apalis-","colibri-","verdin-","tegra124"]
+# meta-freescale
+vars = vars + ["imx","mx6","mx7","mx8","use-mainline-bsp","use-nxp-bsp"]

../openembedded-core/scripts/contrib/convert-overrides.py .

converting the metadata to use ":" as the override character instead of "_".

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8x-v11a.conf
+++ b/conf/machine/apalis-imx8x-v11a.conf
@@ -4,7 +4,7 @@
 #@MAINTAINER: Philippe Schenker <philippe.schenker@toradex.com>
 
 # Set SoC revision to B0
-MACHINE_FEATURES_append = " soc-revb0"
+MACHINE_FEATURES:append = " soc-revb0"
 
 # keep the original machine as an override with high prio
 MACHINEOVERRIDES =. "apalis-imx8x:"
@@ -13,5 +13,5 @@ require conf/machine/apalis-imx8x.conf
 
 # reuse DISTRO_FLAVOUR to display special version exception in the
 # Toradex Easy Installer application
-DISTRO_FLAVOUR_append = " for V1.1A HW"
+DISTRO_FLAVOUR:append = " for V1.1A HW"
 MACHINE_NAME = "Apalis-iMX8X-V11A"
