--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -12,11 +12,11 @@ IMX_DEFAULT_BSP = "nxp"
 
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa53-crypto
-DEFAULTTUNE_mx8mm = "aarch64"
+DEFAULTTUNE:mx8mm = "aarch64"
 require conf/machine/include/tune-cortexa53.inc
 
 # Don't include kernels in standard images
-RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
+RDEPENDS:${KERNEL_PACKAGE_NAME}-base = ""
 
 KERNEL_DEVICETREE = " \
     freescale/imx8mm-verdin-nonwifi-dahlia.dtb \
@@ -24,7 +24,7 @@ KERNEL_DEVICETREE = " \
     freescale/imx8mm-verdin-wifi-dahlia.dtb \
     freescale/imx8mm-verdin-wifi-dev.dtb \
 "
-KERNEL_IMAGETYPE_aarch64 = "Image.gz"
+KERNEL_IMAGETYPE:aarch64 = "Image.gz"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "verdin-imx8mm_defconfig,sdcard"
@@ -49,8 +49,8 @@ BOOT_SPACE = "65536"
 IMXBOOT_TARGETS = "flash_evk_emmc_fastboot"
 IMX_BOOT_SOC_TARGET = "iMX8MM"
 
-IMAGE_BOOT_FILES_append = " boot.scr-${MACHINE};boot.scr"
-WKS_FILE_DEPENDS_append = " u-boot-default-script"
+IMAGE_BOOT_FILES:append = " boot.scr-${MACHINE};boot.scr"
+WKS_FILE_DEPENDS:append = " u-boot-default-script"
 PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 LOADADDR = ""
@@ -64,7 +64,7 @@ MACHINE_FEATURES += "3g bluetooth alsa ext2 pci screen touchscreen usbgadget usb
 
 
 # Add additional firmware
-MACHINE_FIRMWARE_append = " linux-firmware-ath10k linux-firmware-imx-sdma-imx7d"
+MACHINE_FIRMWARE:append = " linux-firmware-ath10k linux-firmware-imx-sdma-imx7d"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
@@ -74,12 +74,12 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
 
-MACHINE_FIRMWARE_append = " linux-firmware-sd8997"
-MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
+MACHINE_FIRMWARE:append = " linux-firmware-sd8997"
+MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
 
 BOARD_TYPE = "verdin"
 
-IMAGE_CLASSES_append = " image_type_tezi"
+IMAGE_CLASSES:append = " image_type_tezi"
 IMAGE_FSTYPES += "teziimg"
 
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
