--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -13,11 +13,11 @@ IMX_DEFAULT_BSP = "nxp"
 
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa72-cortexa53-crypto
-DEFAULTTUNE_mx8qm = "aarch64"
+DEFAULTTUNE:mx8qm = "aarch64"
 require conf/machine/include/tune-cortexa72-cortexa53.inc
 
 # Don't include kernels in standard images
-RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
+RDEPENDS:${KERNEL_PACKAGE_NAME}-base = ""
 
 LOADADDR = ""
 
@@ -34,7 +34,7 @@ KERNEL_DEVICETREE = " \
     freescale/imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
 "
 
-KERNEL_IMAGETYPE_aarch64 = "Image.gz"
+KERNEL_IMAGETYPE:aarch64 = "Image.gz"
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
@@ -50,8 +50,8 @@ ATF_PLATFORM = "imx8qm"
 BOOT_SPACE = "65536"
 IMX_BOOT_SEEK = "32"
 
-IMAGE_BOOT_FILES_append = " boot.scr-${MACHINE};boot.scr hdmitxfw.bin dpfw.bin"
-WKS_FILE_DEPENDS_append = " u-boot-default-script"
+IMAGE_BOOT_FILES:append = " boot.scr-${MACHINE};boot.scr hdmitxfw.bin dpfw.bin"
+WKS_FILE_DEPENDS:append = " u-boot-default-script"
 PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
@@ -62,17 +62,17 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
 
-MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
-MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
-MACHINE_FIRMWARE_append = " firmware-imx-8"
+MACHINE_FIRMWARE:append = " linux-firmware-pcie8997"
+MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
+MACHINE_FIRMWARE:append = " firmware-imx-8"
 
 IMXBOOT_TARGETS = "flash_b0"
 IMX_BOOT_SOC_TARGET = "iMX8QM"
 
-PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
+PREFERRED_PROVIDER:imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "apalis"
 
-IMAGE_CLASSES_append = " image_type_tezi"
+IMAGE_CLASSES:append = " image_type_tezi"
 IMAGE_FSTYPES += "teziimg"
 
 # The imx-boot container takes care for the i.MX 8 offset, so the container
