--- a/conf/machine/colibri-imx8x-v10b.conf
+++ b/conf/machine/colibri-imx8x-v10b.conf
@@ -4,7 +4,7 @@
 #@MAINTAINER: Max Krummenacher <max.krummenacherr@toradex.com>
 
 # Set SoC revision to B0
-MACHINE_FEATURES_append = " soc-revb0"
+MACHINE_FEATURES:append = " soc-revb0"
 
 # keep the original machine as an override with high prio
 MACHINEOVERRIDES =. "colibri-imx8x:"
@@ -13,5 +13,5 @@ require conf/machine/colibri-imx8x.conf
 
 # reuse DISTRO_FLAVOUR to display special version exception in the
 # Toradex Easy Installer application
-DISTRO_FLAVOUR_append = " for V1.0B HW"
+DISTRO_FLAVOUR:append = " for V1.0B HW"
 MACHINE_NAME = "Colibri-iMX8X-V10B"
