--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -11,11 +11,11 @@ IMX_DEFAULT_BSP = "nxp"
 
 require conf/machine/include/imx-base.inc
 # if one wants cortexa35-crypto, set DEFAULTTUNE accordingly
-DEFAULTTUNE_mx8qxp = "aarch64"
+DEFAULTTUNE:mx8qxp = "aarch64"
 require conf/machine/include/tune-cortexa35.inc
 
 # Don't include kernels in standard images
-RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
+RDEPENDS:${KERNEL_PACKAGE_NAME}-base = ""
 
 LOADADDR = ""
 
@@ -28,9 +28,9 @@ KERNEL_DEVICETREE = " \
     freescale/imx8qxp-colibri-dsihdmi-eval-v3.dtb \
     freescale/imx8qxp-colibri-eval-v3.dtb \
 "
-KERNEL_DEVICETREE_use-mainline-bsp = "freescale/imx8qxp-colibri-eval-v3.dtb"
+KERNEL_DEVICETREE:use-mainline-bsp = "freescale/imx8qxp-colibri-eval-v3.dtb"
 
-KERNEL_IMAGETYPE_aarch64 = "Image.gz"
+KERNEL_IMAGETYPE:aarch64 = "Image.gz"
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
@@ -46,14 +46,14 @@ ATF_PLATFORM = "imx8qx"
 BOOT_SPACE = "65536"
 IMX_BOOT_SEEK = "32"
 
-IMAGE_BOOT_FILES_append = " boot.scr-${MACHINE};boot.scr"
-WKS_FILE_DEPENDS_append = " u-boot-default-script"
+IMAGE_BOOT_FILES:append = " boot.scr-${MACHINE};boot.scr"
+WKS_FILE_DEPENDS:append = " u-boot-default-script"
 PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp = "linux-toradex-mainline"
-PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp_preempt-rt = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp:preempt-rt = "linux-toradex-mainline"
 PREFERRED_PROVIDER_virtual/dtb_use-mainline-bsp = "device-tree-overlays-mainline"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
@@ -62,16 +62,16 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
 
-MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
-MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
+MACHINE_FIRMWARE:append = " linux-firmware-pcie8997"
+MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "flash"
 IMX_BOOT_SOC_TARGET = "iMX8QX"
 
-PREFERRED_PROVIDER_imx-sc-firmware = "imx-sc-firmware-toradex"
+PREFERRED_PROVIDER:imx-sc-firmware = "imx-sc-firmware-toradex"
 BOARD_TYPE = "colibri"
 
-IMAGE_CLASSES_append = " image_type_tezi"
+IMAGE_CLASSES:append = " image_type_tezi"
 IMAGE_FSTYPES += "teziimg"
 
 # The imx-boot container takes care for the i.MX 8 offset, so the container
