--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -12,11 +12,11 @@ IMX_DEFAULT_BSP = "nxp"
 
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa53-crypto
-DEFAULTTUNE_mx8mp = "aarch64"
+DEFAULTTUNE:mx8mp = "aarch64"
 require conf/machine/include/tune-cortexa53.inc
 
 # Don't include kernels in standard images
-RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
+RDEPENDS:${KERNEL_PACKAGE_NAME}-base = ""
 
 KERNEL_DEVICETREE = " \
     freescale/imx8mp-verdin-nonwifi-dahlia.dtb \
@@ -24,7 +24,7 @@ KERNEL_DEVICETREE = " \
     freescale/imx8mp-verdin-wifi-dahlia.dtb \
     freescale/imx8mp-verdin-wifi-dev.dtb \
 "
-KERNEL_IMAGETYPE_aarch64 = "Image.gz"
+KERNEL_IMAGETYPE:aarch64 = "Image.gz"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "verdin-imx8mp_defconfig,sdcard"
@@ -56,8 +56,8 @@ IMAGE_BOOTLOADER = "imx-boot"
 IMXBOOT_TARGETS = "flash_evk_emmc_fastboot"
 IMX_BOOT_SOC_TARGET = "iMX8MP"
 
-IMAGE_BOOT_FILES_append = " boot.scr-${MACHINE};boot.scr"
-WKS_FILE_DEPENDS_append = " u-boot-default-script"
+IMAGE_BOOT_FILES:append = " boot.scr-${MACHINE};boot.scr"
+WKS_FILE_DEPENDS:append = " u-boot-default-script"
 PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 LOADADDR = ""
@@ -78,10 +78,10 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
 
 # handle machine firmware
-MACHINE_FIRMWARE_append = " linux-firmware-sd8997"
-MACHINE_FIRMWARE_remove = "firmware-sof-imx"
+MACHINE_FIRMWARE:append = " linux-firmware-sd8997"
+MACHINE_FIRMWARE:remove = "firmware-sof-imx"
 
-IMAGE_CLASSES_append = " image_type_tezi"
+IMAGE_CLASSES:append = " image_type_tezi"
 IMAGE_FSTYPES += "teziimg"
 
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
