apalis-imx8: deploy device-trees for ixora-v1.2
Add device trees for Ixora-v1.2 carrier boards

Related-to: ELB-2801
Signed-off-by: Denys Drozdov <denys.drozdov@toradex.com>
(cherry picked from commit 9171d788022f8abd8e56eca991ddb5635efbf980)

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -30,8 +30,10 @@ KERNEL_DEVICETREE = " \
     freescale/imx8qm-apalis-ixora-v1.1.dtb \
     freescale/imx8qm-apalis-v1.1-eval.dtb \
     freescale/imx8qm-apalis-v1.1-ixora-v1.1.dtb \
+    freescale/imx8qm-apalis-v1.1-ixora-v1.2.dtb \
     freescale/imx8qp-apalis-v1.1-eval.dtb \
     freescale/imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
+    freescale/imx8qp-apalis-v1.1-ixora-v1.2.dtb \
 "
 
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
