colibri-imx6ull-emmc: deploy upstream device tree
Related-to: ELB-4070
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit f993979f5cb1bd8452e145aaa4ccd093b53b2a1f)

--- a/conf/machine/colibri-imx6ull-emmc.conf
+++ b/conf/machine/colibri-imx6ull-emmc.conf
@@ -10,7 +10,15 @@ require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv7a/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel_use-nxp-bsp ?= "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
 
+PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp_preempt-rt = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/dtb_use-mainline-bsp = "device-tree-overlays-mainline"
+
+KERNEL_DEVICETREE:use-mainline-bsp = " \
+    imx6ull-colibri-emmc-eval-v3.dtb \
+"
 KERNEL_DEVICETREE:use-nxp-bsp = " \
     imx6ull-colibri-emmc-aster.dtb \
     imx6ull-colibri-emmc-eval-v3.dtb \
