--- a/conf/machine/colibri-imx6ull-emmc.conf
+++ b/conf/machine/colibri-imx6ull-emmc.conf
@@ -10,7 +10,15 @@ include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel_use-nxp-bsp ?= "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
 
+PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp_preempt-rt = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/dtb_use-mainline-bsp = "device-tree-overlays-mainline"
+
+KERNEL_DEVICETREE_use-mainline-bsp = " \
+    imx6ull-colibri-emmc-eval-v3.dtb \
+"
 KERNEL_DEVICETREE_use-nxp-bsp = " \
     imx6ull-colibri-emmc-aster.dtb \
     imx6ull-colibri-emmc-eval-v3.dtb \
