--- a/conf/machine/colibri-imx6ull-emmc.conf
+++ b/conf/machine/colibri-imx6ull-emmc.conf
@@ -11,7 +11,7 @@ include conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel_use-nxp-bsp ?= "linux-toradex"
 
-KERNEL_DEVICETREE_use-nxp-bsp = " \
+KERNEL_DEVICETREE:use-nxp-bsp = " \
     imx6ull-colibri-emmc-aster.dtb \
     imx6ull-colibri-emmc-eval-v3.dtb \
     imx6ull-colibri-emmc-iris.dtb \
@@ -33,9 +33,9 @@ UBOOT_MACHINE ?= "colibri-imx6ull-emmc_defconfig"
 
 IMAGE_FSTYPES += "tar.xz"
 # wic support
-IMAGE_BOOT_FILES_append = " boot.scr-${MACHINE};boot.scr"
-WKS_FILE_DEPENDS_append = " u-boot-default-script"
+IMAGE_BOOT_FILES:append = " boot.scr-${MACHINE};boot.scr"
+WKS_FILE_DEPENDS:append = " u-boot-default-script"
 WKS_FILE = "sdimage-bootpart.wks"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
-MACHINE_FIRMWARE_remove = "firmware-imx-epdc"
+MACHINE_FIRMWARE:remove = "firmware-imx-epdc"
