manual override syntax fixes for use-mainline-bsp and preempt-rt
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx6ull-emmc.conf
+++ b/conf/machine/colibri-imx6ull-emmc.conf
@@ -9,12 +9,12 @@ MACHINEOVERRIDES =. "mx6:mx6ul:mx6ull:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv7a/tune-cortexa7.inc
 
-PREFERRED_PROVIDER_virtual/kernel_use-nxp-bsp ?= "linux-toradex"
-PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel:use-nxp-bsp ?= "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
 
-PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp = "linux-toradex-mainline"
-PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp_preempt-rt = "linux-toradex-mainline"
-PREFERRED_PROVIDER_virtual/dtb_use-mainline-bsp = "device-tree-overlays-mainline"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline"
 
 KERNEL_DEVICETREE:use-mainline-bsp = " \
     imx6ull-colibri-emmc-eval-v3.dtb \
