--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -48,7 +48,7 @@ WKS_FILE_DEPENDS:append = " u-boot-default-script"
 PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
-PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
