--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -68,11 +68,14 @@ MACHINE_FIRMWARE:append = " linux-firmware-ath10k linux-firmware-imx-sdma-imx7d"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
-PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
+
+IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
+# With use-head-next build mainline U-Boot even if USB functionality is
+# currently (Nov 2021) missing.
+IMX_DEFAULT_BOOTLOADER:use-head-next = "u-boot"
 
 MACHINE_FIRMWARE:append = " linux-firmware-sd8997"
 MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
