verdin-imx8mm: enable mainline kernel
With the distrooverride 'upstream' set override 'use-mainline-bsp' and
use the mainline kernel recipe.

Related-to: ELB-4243
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -9,6 +9,7 @@ MACHINE_NAME = "Verdin-iMX8MM"
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
 
 IMX_DEFAULT_BSP = "nxp"
+IMX_DEFAULT_BSP:upstream = "mainline"
 
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa53-crypto
@@ -68,6 +69,8 @@ MACHINE_FIRMWARE:append = " linux-firmware-ath10k linux-firmware-imx-sdma-imx7d"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-mainline"
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
