verdin-imx8mm: mainline u-boot: build imx-boot with u-boot
U-Boot is now able to build imx-boot as part of the u-boot build.
Use that instead of using imx-boot and imx-mkimage recipes.

Also remove a comment on missing USB functionality as that starts
to work.

Related-to: ELB-4243
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -77,9 +77,15 @@ IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
-# With use-head-next build mainline U-Boot even if USB functionality is
-# currently (Nov 2021) missing.
-IMX_DEFAULT_BOOTLOADER:use-head-next = "u-boot"
+# With use-mainline-bsp build mainline U-Boot
+IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot"
+# if using the mainline u-boot, build imx-boot from within u-boot
+MACHINEOVERRIDES:prepend:use-mainline-bsp = "imx-boot-container:"
+# variables to control imx-boot with u-boot
+ATF_LOAD_ADDR = "0x920000"
+IMX_EXTRA_FIRMWARE = "firmware-imx-8m"
+TEE_LOAD_ADDR = "0xbe000000"
+UBOOT_MAKE_TARGET:use-mainline-bsp = "all"
 
 MACHINE_FIRMWARE:append = " linux-firmware-sd8997"
 MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
