--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -30,9 +30,9 @@ UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "verdin-imx8mp_defconfig,sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
-UBOOT_ENTRYPOINT = "0x40280000"
-UBOOT_DTB_LOADADDRESS = "0x43000000"
-UBOOT_DTBO_LOADADDRESS = "0x46000000"
+UBOOT_ENTRYPOINT_mx8mp  = "0x40000000"
+UBOOT_DTB_LOADADDRESS_mx8mp = "0x44000000"
+UBOOT_DTBO_LOADADDRESS_mx8mp = "0x46000000"
 UBOOT_RD_LOADADDRESS = "0x60000000"
 
 # Set u-boot DTB
