--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -81,6 +81,13 @@ IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
 # With use-mainline-bsp build mainline U-Boot
 IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot"
+# if using the mainline u-boot, build imx-boot from within u-boot
+MACHINEOVERRIDES:prepend:use-mainline-bsp = "imx-boot-container:"
+# variables to control imx-boot with u-boot
+ATF_LOAD_ADDR = "0x920000"
+IMX_EXTRA_FIRMWARE = "firmware-imx-8m"
+TEE_LOAD_ADDR = "0xbe000000"
+UBOOT_MAKE_TARGET:use-mainline-bsp = "all"
 
 # handle machine firmware
 MACHINE_FIRMWARE:append = " linux-firmware-sd8997"
